2003-02-20 Ales Hvezda   <ahvezda@geda.seul.org>

        * examples/vams/commonrc: Changed how the current directory
        variable is set (used "'s instead of ').

        * src/gnetlist.c: Applied patchlet from Steve Tell for disabling
        the guile 1.6.3 deprecated warnings.

        * README: Added note suggestion by Steve Tell about warning users
        that deprecated guile warnings are turned off.

2003-02-18 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Bumped version to 20030223

	* tests/singlenet.pads: Updated test file with new fixes to the pads
	backend.

2003-02-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Applied Gabriel Paubert's warning reducing patch with
        a few minor mods.

2003-01-26 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-pads.scm: Oops, managed to break the pads backend. 
	Fixed a "footprint" which really should have stayed at "pattern".

	* configure.in: Changed -fnative-struct to -mms-bitfields for 
	gcc 3.2 mingw compiler (older mingw compilers are no longer 
	supported)

2003-01-11 Ales Hvezda   <ahvezda@geda.seul.org>

	* Makefile.am: Fixed the distclean-local target.

2002-12-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/annotate.sh, unannotate.sh: Oops, forgot to change a bunch
	of uref= attributes to refdes=.  These scripts now work.

2002-11-30 Ales Hvezda   <ahvezda@geda.seul.org>

	* lib/system-gnetlistrc.in: Changed the variable names which hold
	the paths to the data and rc directories.

	* scheme/gnet-partslist[1|2|3].scm: Fixed another bug reported by
	Koichi Nagashima (via debian bugs) where the common partslist scm
	file wasn't being found if --with-rcdir was specified (as the 
	debian packages do).

        * aclocal.m4: Removed file from cvs.

	* examples/vams/*.sym|sch: Ran gsymupdate/gschupdate on all vams
	example files

	* scheme/gnet-vams.scm: Fixed a type which prevented "gn" and "ge"
	within gschem to work.
