@@ -1,3 +1,8 @@
+2003-03-09 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* scheme/gnet-PCBboard.scm: Removed a "(false-if-exception  ...)
+   	so that this backend works with guile 1.6.3.  Patch by Dan McMahill.
+
 2003-02-20 Ales Hvezda   <ahvezda@geda.seul.org>
 
         * examples/vams/commonrc: Changed how the current directory
